// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > Link baseVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-8b54d308=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium"
    data-v-8b54d308=""
    href="/mobile-vue/overview"
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium t-link--hover"
    data-v-8b54d308=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
</div>
`;

exports[`Link > Link linkSizeVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-55ae5f74=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--small"
    data-v-55ae5f74=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       S跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-55ae5f74=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium"
    data-v-55ae5f74=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       M跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-55ae5f74=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--large"
    data-v-55ae5f74=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       L跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-55ae5f74=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
</div>
`;

exports[`Link > Link mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Link 链接
  </h1>
  <p
    class="summary"
  >
    当功能使用图标即可表意清楚时，可使用纯图标悬浮按钮，例如：添加、发布。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-8b54d308=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-8b54d308=""
          href="/mobile-vue/overview"
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium t-link--hover"
          data-v-8b54d308=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        下划线文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-ed7bec9e=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium t-link--underline"
          data-v-ed7bec9e=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium t-link--underline t-link--hover"
          data-v-ed7bec9e=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        前置图标文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-c9cd3e06=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium t-link--underline t-link--hover"
          data-v-c9cd3e06=""
          target=""
        >
          <span
            class="t-link__prefix-icon"
          >
            
            <svg
              class="t-icon t-icon-link"
              data-v-c9cd3e06=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13.3 3.96a4.77 4.77 0 116.74 6.75l-3.03 3.03-1.41-1.42 3.03-3.03a2.77 2.77 0 10-3.92-3.92L11.68 8.4 10.26 7l3.03-3.03zM15.4 10L10 15.41 8.58 14 14 8.59 15.4 10zm-7 1.68L5.36 14.7a2.77 2.77 0 103.92 3.92l3.03-3.03L13.74 17l-3.03 3.03a4.77 4.77 0 11-6.75-6.75l3.03-3.03 1.41 1.42z"
                fill="currentColor"
              />
            </svg>
            
          </span>
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <!---->
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium"
          data-v-c9cd3e06=""
          target=""
        >
          <span
            class="t-link__prefix-icon"
          >
            
            <svg
              class="t-icon t-icon-link"
              data-v-c9cd3e06=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13.3 3.96a4.77 4.77 0 116.74 6.75l-3.03 3.03-1.41-1.42 3.03-3.03a2.77 2.77 0 10-3.92-3.92L11.68 8.4 10.26 7l3.03-3.03zM15.4 10L10 15.41 8.58 14 14 8.59 15.4 10zm-7 1.68L5.36 14.7a2.77 2.77 0 103.92 3.92l3.03-3.03L13.74 17l-3.03 3.03a4.77 4.77 0 11-6.75-6.75l3.03-3.03 1.41 1.42z"
                fill="currentColor"
              />
            </svg>
            
          </span>
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <!---->
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        后置图标文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-c6b7a388=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-c6b7a388=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-c6b7a388=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium"
          data-v-c6b7a388=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-c6b7a388=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        不同主题
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-004b20ae=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-004b20ae=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-004b20ae=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium"
          data-v-004b20ae=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-004b20ae=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--danger t-link--medium"
          data-v-004b20ae=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-004b20ae=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      <div
        class="tdesign-mobile-link-demo"
        data-v-004b20ae=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--success t-link--medium"
          data-v-004b20ae=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-004b20ae=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--warning t-link--medium"
          data-v-004b20ae=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-004b20ae=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        禁用状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-0c766346=""
      >
        <a
          aria-disabled="true"
          class="t-link t-link--primary t-link--medium t-link--disabled"
          data-v-0c766346=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-0c766346=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="true"
          class="t-link t-link--default t-link--medium t-link--disabled"
          data-v-0c766346=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-0c766346=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="true"
          class="t-link t-link--danger t-link--medium t-link--disabled"
          data-v-0c766346=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-0c766346=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      <div
        class="tdesign-mobile-link-demo"
        data-v-0c766346=""
      >
        <a
          aria-disabled="true"
          class="t-link t-link--success t-link--medium t-link--disabled"
          data-v-0c766346=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-0c766346=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="true"
          class="t-link t-link--warning t-link--medium t-link--disabled"
          data-v-0c766346=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-0c766346=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        链接尺寸
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-55ae5f74=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--small"
          data-v-55ae5f74=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             S跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-55ae5f74=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-55ae5f74=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             M跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-55ae5f74=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--large"
          data-v-55ae5f74=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             L跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-55ae5f74=""
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
                fill="currentColor"
              />
            </svg>
            
          </span>
        </a>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Link > Link prefixVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-c9cd3e06=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium t-link--underline t-link--hover"
    data-v-c9cd3e06=""
    target=""
  >
    <span
      class="t-link__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-link"
        data-v-c9cd3e06=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13.3 3.96a4.77 4.77 0 116.74 6.75l-3.03 3.03-1.41-1.42 3.03-3.03a2.77 2.77 0 10-3.92-3.92L11.68 8.4 10.26 7l3.03-3.03zM15.4 10L10 15.41 8.58 14 14 8.59 15.4 10zm-7 1.68L5.36 14.7a2.77 2.77 0 103.92 3.92l3.03-3.03L13.74 17l-3.03 3.03a4.77 4.77 0 11-6.75-6.75l3.03-3.03 1.41 1.42z"
          fill="currentColor"
        />
      </svg>
      
    </span>
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <!---->
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium"
    data-v-c9cd3e06=""
    target=""
  >
    <span
      class="t-link__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-link"
        data-v-c9cd3e06=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13.3 3.96a4.77 4.77 0 116.74 6.75l-3.03 3.03-1.41-1.42 3.03-3.03a2.77 2.77 0 10-3.92-3.92L11.68 8.4 10.26 7l3.03-3.03zM15.4 10L10 15.41 8.58 14 14 8.59 15.4 10zm-7 1.68L5.36 14.7a2.77 2.77 0 103.92 3.92l3.03-3.03L13.74 17l-3.03 3.03a4.77 4.77 0 11-6.75-6.75l3.03-3.03 1.41 1.42z"
          fill="currentColor"
        />
      </svg>
      
    </span>
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <!---->
  </a>
</div>
`;

exports[`Link > Link statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-link-demo"
    data-v-0c766346=""
  >
    <a
      aria-disabled="true"
      class="t-link t-link--primary t-link--medium t-link--disabled"
      data-v-0c766346=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-0c766346=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="true"
      class="t-link t-link--default t-link--medium t-link--disabled"
      data-v-0c766346=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-0c766346=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="true"
      class="t-link t-link--danger t-link--medium t-link--disabled"
      data-v-0c766346=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-0c766346=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
  </div>
  <div
    class="tdesign-mobile-link-demo"
    data-v-0c766346=""
  >
    <a
      aria-disabled="true"
      class="t-link t-link--success t-link--medium t-link--disabled"
      data-v-0c766346=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-0c766346=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="true"
      class="t-link t-link--warning t-link--medium t-link--disabled"
      data-v-0c766346=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-0c766346=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
  </div>
  
</div>
`;

exports[`Link > Link suffixVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-c6b7a388=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium"
    data-v-c6b7a388=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-c6b7a388=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium"
    data-v-c6b7a388=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-c6b7a388=""
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
          fill="currentColor"
        />
      </svg>
      
    </span>
  </a>
</div>
`;

exports[`Link > Link themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-link-demo"
    data-v-004b20ae=""
  >
    <a
      aria-disabled="false"
      class="t-link t-link--primary t-link--medium"
      data-v-004b20ae=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-004b20ae=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="false"
      class="t-link t-link--default t-link--medium"
      data-v-004b20ae=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-004b20ae=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="false"
      class="t-link t-link--danger t-link--medium"
      data-v-004b20ae=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-004b20ae=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
  </div>
  <div
    class="tdesign-mobile-link-demo"
    data-v-004b20ae=""
  >
    <a
      aria-disabled="false"
      class="t-link t-link--success t-link--medium"
      data-v-004b20ae=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-004b20ae=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="false"
      class="t-link t-link--warning t-link--medium"
      data-v-004b20ae=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-004b20ae=""
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3 21V3h7.1v2H5v14h14v-5.1h2V21H3zm7.59-9l7-7H13V3h8v8h-2V6.41l-7 7L10.59 12z"
            fill="currentColor"
          />
        </svg>
        
      </span>
    </a>
  </div>
  
</div>
`;

exports[`Link > Link underlineVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-ed7bec9e=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium t-link--underline"
    data-v-ed7bec9e=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium t-link--underline t-link--hover"
    data-v-ed7bec9e=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
</div>
`;
